<!--Dylan Ashton n01442206 -->
<resources>
    <string name="app_name" translatable="false">DylanAshton N01442206</string>
    <string name="pizza_dial">pizza dial</string>
    <string name="help">-Help-</string>
    <string name="uid" translatable="false">Dylan Ashton n01442206</string>
    <string name="menu_pizza_toast">Order pizza</string>
    <string name="next">Next</string>
    <string name="pizza_button">Pizza button</string>
    <string name="else_if">Choose a store</string>
    <string name="error">Please pick a store</string>
    <string name="dylan" translatable="false">Dylan</string>
    <string name="dot" translatable="false">…</string>
    <string name="thin_crusted">Thin Crusted</string>
    <string name="deep_dish">Deep dish</string>
    <string name="new_york_style">New York Style</string>
    <string name="panzerotti">Panzerotti</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="cheese">Cheese</string>
    <string name="bacon">Bacon</string>
    <string name="tomato">Tomato</string>
    <string name="ns">next screen</string>
    <string name="go_to_payment">Go to payment</string>
    <string name="peppers">Peppers</string>
    <string name="pick_up">Pick-up</string>
    <string name="mf">missing fields</string>
    <string name="co">Confirm Order</string>
    <string name="confirm">30–60 minutes for delivery, continue?</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string-array name="pizza_stores">
        <item>pizzapizza</item>
        <item>pizza73</item>
        <item>pizzahut</item>
        <item>pizzanova</item>
    </string-array>
</resources>