<?xml version="1.0" encoding="utf-8"?>
<!--Dylan Ashton n01442206 -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dylan_layout"
    tools:context=".OrderActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/dylan_radio_group"
        android:orientation="vertical"
        android:background="@color/orange2">

        <RadioButton android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/new_york_style"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/deep_dish"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/thin_crusted"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/panzerotti"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dylan_radio_group2"
        android:layout_marginTop="142dp"
        android:orientation="vertical"
        android:background="@color/orange2">

        <RadioButton android:id="@+id/radio1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/small"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/radio2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/medium"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/radio3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/large"
            android:textColor="@color/blue"
            android:onClick="onRadioButtonClicked2"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/dylan_text2"
        android:layout_marginTop="-2dp">
    </TextView>

    <CheckBox
        android:id="@+id/checkbox_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/blue"
        android:text="@string/cheese"
        android:layout_marginTop="240dp"/>
    <CheckBox
        android:id="@+id/checkbox_bacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/blue"
        android:text="@string/bacon"
        android:layout_marginTop="240dp"
        android:layout_marginStart="100dp"/>
    <CheckBox
        android:id="@+id/checkbox_tomato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/blue"
        android:text="@string/tomato"
        android:layout_marginTop="240dp"
        android:layout_marginStart="300dp"/>
    <CheckBox
        android:id="@+id/checkbox_peppers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/blue"
        android:text="@string/peppers"
        android:layout_marginTop="240dp"
        android:layout_marginStart="200dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="315dp"
        android:layout_marginTop="5dp"
        android:src="@mipmap/pizza_round"
        android:id="@+id/store_pic">
    </ImageView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>